<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.ccci</groupId>
  <artifactId>red-egg</artifactId>
  <version>10</version>


  <properties>
    <version.arquillian_core>1.1.10.Final</version.arquillian_core>
    <wildfly.arquillian.version>8.2.1.Final</wildfly.arquillian.version>
    <jboss.as.arquillian.version>7.2.0.Final</jboss.as.arquillian.version>
    <resteasy.version>3.0.12.Final</resteasy.version>

    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <log4j2.version>2.20.0</log4j2.version>
    <rollbar-java.version>1.10.0</rollbar-java.version>
  </properties>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>org.jboss.arquillian</groupId>
        <artifactId>arquillian-bom</artifactId>
        <version>${version.arquillian_core}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <dependencies>

    <dependency>
      <groupId>org.jboss.spec.javax.servlet</groupId>
      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
      <version>1.0.2.Final</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>io.airbrake</groupId>
      <artifactId>airbrake-java</artifactId>
      <version>2.2.8</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <!--
        All Cru (java) apps use slf4j, so for now we treat this as a hard dependency.
        It is used for internal error logging.
       -->
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.5</version>
    </dependency>

    <dependency>
      <groupId>com.rollbar</groupId>
      <artifactId>rollbar-api</artifactId>
      <version>${rollbar-java.version}</version>
    </dependency>

    <dependency>
      <groupId>com.rollbar</groupId>
      <artifactId>rollbar-java</artifactId>
      <version>${rollbar-java.version}</version>
    </dependency>

    <dependency>
      <!-- guava is a useful and well-adopted library -->
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>31.1-jre</version>
    </dependency>

    <dependency>
      <!-- gson is useful for serializing arbitrary java objects -->
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.10.1</version>
    </dependency>

    <dependency>
      <!-- log4j2 can be used to report errors -->
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j2.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <!-- we need to use some core classes to do runtime-reconfig -->
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j2.version}</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <!-- log4j can be used to report errors -->
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
      <optional>true</optional>
    </dependency>


    <dependency>
      <!-- logback can be used to report errors -->
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.3.11</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <!-- CDI is not required, but we will make it convenient to access the recording api via CDI -->
      <groupId>javax.enterprise</groupId>
      <artifactId>cdi-api</artifactId>
      <version>1.0-SP4</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>


    <dependency>
      <!-- jax-rs not required, but we hook into it if it's there -->
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>jaxrs-api</artifactId>
      <version>${resteasy.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.jboss.spec.javax.xml.ws</groupId>
      <artifactId>jboss-jaxws-api_2.2_spec</artifactId>
      <version>2.0.2.Final</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>javax.jws</groupId>
      <artifactId>jsr181-api</artifactId>
      <version>1.0-MR1</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>



    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-core</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-library</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hobsoft.hamcrest</groupId>
      <artifactId>hamcrest-compose</artifactId>
      <version>0.4.0</version>
      <scope>test</scope>
    </dependency>


    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit-dep</artifactId>
      <version>4.10</version>
      <exclusions>
        <exclusion>
          <groupId>org.hamcrest</groupId>
          <artifactId>hamcrest-core</artifactId>
        </exclusion>
      </exclusions>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.jboss.arquillian.protocol</groupId>
      <artifactId>arquillian-protocol-servlet</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.jboss.shrinkwrap.resolver</groupId>
      <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
      <scope>test</scope>
    </dependency>


    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-jackson2-provider</artifactId>
      <version>${resteasy.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.11.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.objenesis</groupId>
      <artifactId>objenesis</artifactId>
      <scope>test</scope>
      <!-- version 3.2 introduces a jboss modules dependency on jdk.unsupported, which breaks on wildfly 8 -->
      <version>3.1</version>
    </dependency>

    <dependency>
      <groupId>uk.co.datumedge</groupId>
      <artifactId>hamcrest-json</artifactId>
      <version>0.2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-client</artifactId>
      <version>${resteasy.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-model-builder</artifactId>
      <version>3.0.5</version>
      <scope>test</scope>
    </dependency>

  </dependencies>


  <profiles>
    <profile>
      <!-- An optional Arquillian testing profile that executes tests
          in a remote JBoss AS instance -->
      <!-- Run with: mvn clean test -Parq-jbossas-remote -->
      <id>arq-jbossas-remote</id>
      <dependencies>
        <dependency>
          <groupId>org.jboss.as</groupId>
          <artifactId>jboss-as-arquillian-container-remote</artifactId>
          <version>${jboss.as.arquillian.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <arquillian.management.port>9999</arquillian.management.port>
      </properties>
    </profile>

    <profile>
      <id>arq-wildfly-managed</id>
      <!--
        The build will start and stop Wildfly for integration tests.
      -->
      <dependencies>
        <dependency>
          <groupId>org.wildfly</groupId>
          <artifactId>wildfly-arquillian-container-remote</artifactId>
          <version>${wildfly.arquillian.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>

      <build>
        <plugins>
          <plugin>
            <artifactId>maven-resources-plugin</artifactId>
            <version>2.6</version>
          </plugin>

          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <version>1.8</version>
            <executions>
              <execution>
                <id>reserve-network-ports</id>
                <goals>
                  <goal>reserve-network-port</goal>
                </goals>
                <phase>generate-test-resources</phase>
                <configuration>
                  <portNames>
                    <portName>jboss.management.http.port</portName>
                    <portName>jboss.http.port</portName>
                    <portName>jboss.management.native.port</portName>
                  </portNames>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.wildfly.plugins</groupId>
            <artifactId>wildfly-maven-plugin</artifactId>
            <version>1.0.2.Final</version>
            <configuration>
              <version>${wildfly.arquillian.version}</version>
              <!--suppress MavenModelInspection - because intellij doesn't recognize build helper plugin -->
              <jvmArgs>
                -Djboss.management.http.port=${jboss.management.http.port}
                -Djboss.management.native.port=${jboss.management.native.port}
                -Djboss.http.port=${jboss.http.port}
                -XX:MaxPermSize=512m
              </jvmArgs>
              <!--suppress MavenModelInspection - because intellij doesn't recognize build helper plugin -->
              <port>${jboss.management.http.port}</port>
            </configuration>
            <executions>
              <execution>
                <phase>test-compile</phase>
                <goals>
                  <goal>start</goal>
                </goals>
              </execution>
            </executions>

          </plugin>
        </plugins>
      </build>
      <properties>
        <!-- because intellij doesn't recognize build helper plugin, and doesn't give a way to supress this -->
        <arquillian.management.port>${jboss.management.http.port}</arquillian.management.port>
      </properties>
    </profile>

    <!-- Run with: mvn clean test -Parq-wildfly-remote -->
    <profile>
      <id>arq-wildfly-remote</id>
      <dependencies>
        <dependency>
          <groupId>org.wildfly</groupId>
          <artifactId>wildfly-arquillian-container-remote</artifactId>
          <version>${wildfly.arquillian.version}</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <properties>
        <arquillian.management.port>9990</arquillian.management.port>
      </properties>
    </profile>

    <profile>
      <id>with-jrebel</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.zeroturnaround</groupId>
            <artifactId>jrebel-maven-plugin</artifactId>
            <version>1.1.5</version>
            <executions>
              <execution>
                <id>generate-rebel-xml</id>
                <phase>process-resources</phase>
                <goals>
                  <goal>generate</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>

    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
        <filtering>true</filtering>
      </testResource>
    </testResources>

    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12</version>
        <configuration>
          <argLine>-Xmx1024m</argLine>
        </configuration>

      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.4</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.16</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>

        <configuration>
          <argLine>-Xmx1024m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.wildfly.plugins</groupId>
        <artifactId>wildfly-maven-plugin</artifactId>
        <version>1.2.0.Alpha2</version>
      </plugin>

    </plugins>
  </build>

</project>
